tests/TestPolicies/OffendingPolicies/OverlyPermissive/overly-permissive-cidr.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overly-permissive-cidr
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: my-app
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0 # Allows traffic from the entire IPv4 address range
    ports:
    - protocol: TCP
      port: 80 # Allows HTTP traffic
